--- a/examples/docker-compose-cluster/docker-compose.yml
+++ b/examples/docker-compose-cluster/docker-compose.yml
@@ -14,7 +14,7 @@ ejabberd:
   environment:
     - XMPP_DOMAIN=example.com
     - ERLANG_NODE=ejabberd
-    - EJABBERD_ADMIN=admin@example.com
+    - EJABBERD_ADMINS=admin@example.com
     - EJABBERD_USERS=admin@example.com:test321 user@example.com
     - ERLANG_COOKIE=testCluster
     - SKIP_MODULES_UPDATE=true
