--- a/examples/docker-compose/docker-compose.yml
+++ b/examples/docker-compose/docker-compose.yml
@@ -7,5 +7,5 @@ ejabberd:
   environment:
     - ERLANG_NODE=ejabberd
     - XMPP_DOMAIN=example.com xyz.io
-    - EJABBERD_ADMIN=admin@example.com
+    - EJABBERD_ADMINS=admin@example.com
     - EJABBERD_USERS=admin@example.com:password4321 user1@xyz.io
