--- a/examples/docker-compose-cluster/docker-compose.yml
+++ b/examples/docker-compose-cluster/docker-compose.yml
@@ -2,8 +2,6 @@ dnsdock:
   image: tonistiigi/dnsdock
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  ports:
-    - 172.17.42.1:53:53/udp
 
 ejabberd:
   build: .
@@ -13,13 +11,13 @@ ejabberd:
     - 5280
   environment:
     - XMPP_DOMAIN=example.com
-    - ERLANG_NODE=ejabberd
+    - ERLANG_NODE=nodename
     - EJABBERD_ADMINS=admin@example.com
     - EJABBERD_USERS=admin@example.com:test321 user@example.com
     - ERLANG_COOKIE=testCluster
     - SKIP_MODULES_UPDATE=true
-    - EJABBERD_CLUSTER=true
     - USE_DNS=true
-  dns: 172.17.42.1
+  dns: 172.17.0.2
   domainname: dockercomposecluster_ejabberd.docker
-  tty: true
+  links:
+    - dnsdock
